# PT-Progress-Note

./: .gitignore  .vercelignore  LICENSE  README.md  capacitor.config.ts  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release-android.yml  release-desktop.yml
__tests__/: autoBackup.test.ts  hashUtils.test.ts  localDataService.test.ts  localDate.test.ts  passwordPolicy.test.ts
android/: build_output.txt
android/app/: build.gradle
app/: globals.css  layout.tsx  page.tsx
components/: AutoLock.tsx  BackupRestoreModal.tsx  BodyDiagram.tsx  ChangePasswordModal.tsx  DataMigrationModal.tsx  DetailedPosteriorMuscleDiagram.tsx  FaceScale.tsx  LoginModal.tsx  MacroManagementModal.tsx  PatientTrendChart.tsx  ProgressNoteForm.tsx  Sidebar.tsx  SmartTextarea.tsx  TherapistManagementModal.tsx  UpdateChecker.tsx  bodyDiagramShapes.ts  hashUtils.ts
components/ui/: Button.tsx  Card.tsx  ConfirmDialog.tsx  (+3 more)
docs/: code-signing-guide.md  supabase-schema.sql  supabase-setup-guide.md  tauri-release-guide.md
lib/: autoBackup.ts  cryptoService.ts  dataService.ts  database.types.ts  draftNote.ts  genId.ts  isTauri.ts  localDataService.ts  localDate.ts  macros.ts  passwordPolicy.ts  pdfSlices.ts  supabase.ts  theme.ts  themeScript.ts
public/: manifest.json  sw.js
scratch/: generate_muscles.py  generate_svg.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
store/: useAuthStore.ts  useNoteStore.ts
supabase/: config.toml
types/: index.ts
(+16 files in other folders)
